fixed the deprecated api usage for java 11